frontend/test/should_fail/keepOneForEach_accumulation_method_type_mismatch2.grg
test t
{
---
	def var i:int;
	def j:Node;
} \ keepOneForEach<i>Accumulate<j>By<sum>
